[project]
name = "event-loop-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Core linter rules - most important ones for code quality
select = ["E", "F", "I", "B"]  # pycodestyle, Pyflakes, isort, bugbear
ignore = ["F841", "F403", "E402", "B026", "F405", "E101", "B008", "B905", "B006"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py